deny-all.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyall
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAll
      #validation:
        # Schema for the `parameters` field
        #openAPIV3Schema:
          #properties:
            #labels:
              #type: array
              #items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyall

        violation[{"msg": msg}] {
          msg := sprintf("REVIEW OBJECT: %v", [input])
        }


#msg := sprintf("REVIEW OBJECT: %v", [input.review])
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAll
metadata:
  name: deny-all-namespaces
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        #kinds: ["Pod"]
        kinds: ["Application"]
  parameters:
    #labels: ["gatekeeper", "watlol"]
    #test: ["asdasd"]
    applications:
      - name: myapp
        project: myproject
  #parameters:
    #applications:
      #- name: "applications"
        #projects: [ "default" ]
      #- name: "auth"
        #projects: [ "default" ]
